[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quiverdb"
version = "0.0.1"
description = "Graph retrieval platform built for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Clay Gendron" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "email-validator>=2.0",
    "pydantic>=2.0",
    "rustworkx>=0.17",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.31",
    "usearch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ty>=0.0.11",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/claygendron/quiverdb"
Repository = "https://github.com/claygendron/quiverdb"

[tool.hatch.build.targets.wheel]
packages = ["src/quiverdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.environment]
root = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
